--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "test": "mocha"
     },
     "dependencies": {
+        "child_process": "^1.0.2",
         "dotenv": "^10.0.0",
         "express": "^4.21.2",
         "mongoose": "^6.13.5",
